fix: resolve sidebar misalignment on spaces, tutorials, and references pages

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -72,7 +72,7 @@
 
 //main sections
 .td-outer {
-  margin-top: 3rem;
+  margin-top: 0;
 }
 
 .td-main main {
@@ -85,6 +85,7 @@
 
 body {
   overflow-x: hidden;
+  padding-top: 5.5rem;
 }
 
 // Main Middle Body
